# words-trainer

./: .gitignore  README.md  cli.py  docker-compose.yml  progress.sqlite3  pyproject.toml
bot/: __init__.py  agent.py  chat.py  config.py  curator.py  drill.py  grader.py  jobs.py  keyboards.py  logging.py  main.py  middleware.py  presentation.py  push.py  reminders.py
data/: deutsch A2 words Swetlana.csv  verbs mit prapositionen.csv  verbs v2.csv
deploy/: com.wordsbot.backup.plist  com.wordsbot.bot.plist
docs/: operations.md
docs/plans/: 2026-07-20-001-feat-telegram-vocab-trainer-plan.md  2026-07-21-001-feat-deck-practice-word-disposition-deck-stats-plan.md  2026-07-22-001-feat-target-language-llm-grading-reminder-scheduling-plan.md
scripts/: backup_postgres.sh  install_launchd.sh  ops_check.sh  restore_postgres.sh
skills/words-trainer-agent-tools/: SKILL.md
tests/: __init__.py  support.py  test_agent.py  test_bot.py  test_cli.py  test_core.py  test_curator.py  test_db.py  test_features.py  test_grading.py  test_import_export.py  test_reminders.py  test_sessions.py  test_words.py
vocab/: __init__.py  curator.py  db.py  grading.py  jobs.py  languages.py  llm.py  models.py  reminders.py  scheduler.py  srs.py  statistics.py  storage.py  words.py
vocab/exercises/: __init__.py  base.py  choice.py  cloze.py  flashcard.py  grammar.py
vocab/migrations/: 001_initial.sql  002_session_ownership.sql  003_agent_history.sql  004_word_disposition_and_review_deck.sql  005_job_control.sql  006_target_language_grading_and_reminders.sql  007_canonical_language_codes.sql  (+1 more)
(+1 files in other folders)
