[project]
name = "words-trainer"
version = "0.1.0"
description = "Private multi-user Telegram vocabulary trainer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.30,<4",
    "apscheduler==3.11.3",
    "openai-agents~=0.18.0",
    "psycopg[binary,pool]>=3.2,<4",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.12,<3",
    "python-dotenv>=1.1,<2",
]

[tool.uv]
package = false
